ADMINUI-1324 Fixes notes wrapping

--- a/less/app.less
+++ b/less/app.less
@@ -1220,7 +1220,7 @@ ul.attributes {
   .actions a .icon-undo { color: @grayLight; }
 
   .date { font-size: 12px; color: @gray; float: right;}
-  .note { .widget-content; display: block; padding: 8px; font-size: 12px; white-space: pre;}
+  .note { .widget-content; display: block; padding: 8px; font-size: 12px; white-space: pre-wrap;}
 
   ul { height: 320px; overflow-y: scroll; }
   textarea { width: 98%; }
